# graph-conv-networks

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_experiments.ipynb  02_bio_experiments.ipynb
src/: __init__.py  requirements.txt
src/data/: __init__.py  dataset.py
src/models/: __init__.py  gat.py  gcn.py  rgcn.py
src/training/: __init__.py  analyzer.py  trainer.py  tune.py
src/visualization/: __init__.py  plots.py
